@@ -42,7 +42,7 @@ jabber_hjanuschka=klewan@dev.januschka.com
 #icq
 licq_fifo=/root/.licq/licq_fifo
 
-replication=false
+replication=true
 replicate_cnt=3
 replicate[1]=localhost
 replication_intervall=3600;
