@@ -1,3 +1,8 @@
+2005-10-14 00:42  hjanuschka
+
+	* ChangeLog, src/client/cmd.c, src/client/portier.c: portier/cmd:
+	  get_services -> recieve a list of passive services
+
 2005-10-14 00:13  hjanuschka
 
 	* ChangeLog, bartlby.cfg, src/check.c, src/sched.c, src/trigger.c:
